# icubgraspopt

./: .clang_complete  .gitignore  CMakeLists.txt  batch_opt_synth.py  bayesopt_synth.cpp  iCubSimulator.cpp
data/: iCub_scene.xml
include/: ApproachMovementSpace.h  ApproachMovementSpace.hpp  LogManager.h  LogManager.hpp  OptFuncs.h  OptFuncs.hpp  OptimizablesManager.hpp  OrientedBoundingBox.h  OrientedBoundingBox.hpp  RKHS.h  RKHS.hpp  TGPOptimization.h  TGPOptimization.hpp  Window.h  Window.hpp  bayesoptCommon.h  iCub.h  iCub.hpp  iCubGraspQuality.hpp  iCubHand.h  iCubHand.hpp  iCubOptParameters.h  iCubOptParameters.hpp  iCubOptimizable.h  iCubOptimizable.hpp  moc_Window.cxx  moc_Window.cxx_parameters
resources/: rkhs_cfg.json
src/: ApproachMovementSpace.cpp  LogManager.cpp  OptFuncs.cpp  OptimizablesManager.cpp  OrientedBoundingBox.cpp  RKHS.cpp  TGPOptimization.cpp  Window.cpp  iCub.cpp  iCubGraspQuality.cpp  iCubHand.cpp  iCubOptParameters.cpp  iCubOptimizable.cpp
ui/: iCubSimulator.ui
